--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li>Integrated Mapbox API for interactive maps to display property locations.</li>
                         <li>Deployed the application for public access, ensuring full responsiveness using Bootstrap.</li>
                 </ul>
-                <p>Project link:
+                <p>Project link-
                     <a href="https://github.com/Samiran755/WanderLust-">Github link</a>
                 </p>
             </section>
